--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
         <div class="ladinho">
 
             <div class="barra">
-                <a class="rod" href="">Início</a>
-                <a class="rod" href="">Planos</a>
-                <a class="rod" href="">Contato</a>
+                <a class="rod" href="index.html">Início</a>
+                <a class="rod" href="#planos">Planos</a>
+                <a class="rod" href="contato.html">Contato</a>
             </div>
             <div class="insc">
                 <p class="p">
