--- a/contato.html
+++ b/contato.html
@@ -60,9 +60,9 @@
         <div class="ladinho">
 
             <div class="barra">
-                <a class="rod" href="">Início</a>
-                <a class="rod" href="">Planos</a>
-                <a class="rod" href="">Contato</a>
+                <a class="rod" href="index.html">Início</a>
+                <a class="rod" href="index.html">Planos</a>
+                <a class="rod" href="contato.html">Contato</a>
             </div>
             <div class="insc">
                 <p>
